# Herbal-Candy

./: Cargo.toml  README.md  rustfmt.toml
.zed/: settings.json
apps/assembler/: Cargo.toml  build.rs
apps/assembler/src/: assembler.rs  lexer.rs  main.rs  object.rs  parser.rs  token.rs
apps/beagle/: Cargo.toml
apps/beagle/src/: main.rs  memory.rs
apps/debugger/: package-lock.json  package.json
apps/debugger/src-tauri/: Cargo.toml  tauri.conf.json
apps/ok/: Cargo.toml
apps/ok/src/: assembler.rs  byte_code.rs  main.rs  memory.rs  program.rs  vm.rs
apps/vm/src/: convert.rs  main.rs  memory.rs  vm.rs
examples/: fibonacci.hasm
libs/alright/: Cargo.toml
libs/byte_code/: Cargo.toml  build.rs
libs/byte_code/src/: bit_width.rs  encoding.rs  instruction.rs  lib.rs  memory.rs  register.rs
libs/instr_codegen/: Cargo.toml
libs/instr_codegen/src/: instr.rs  layout.rs  lib.rs
libs/vm/: Cargo.toml
libs/vm/src/: lib.rs  memory.rs
