[package]
name = "byte_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
instr_codegen = { workspace = true }
prettyplease  = { workspace = true }
quote         = { workspace = true }
syn           = { workspace = true }
